[VK] Don't hide popups when resizing to the same size.

Currently, clicking on a dropdown when the VK is active will cause
the VK to hide, which sends out a resize message to RenderViewImpl,
which then forces the newly opened dropdown to hide again.

The resize message sent by the VK doesn't actually change the size,
so we can prevent the popup from hiding if the new requested size
is the same as the old. The hope is that this doesn't affect any
other existing behaviour.

Bug: 761908
Change-Id: I0d2d7e876b42cced2be867ebc5ad3432a4d045c7
Reviewed-on: https://chromium-review.googlesource.com/909869
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536028}
Former-commit-id: 36f4d544f37aec38256e4daeeef70228ad0a0436